tests/baselines/reference/project/jsFileCompilationExtendsTag/amd/jsFileCompilationExtendsTag.errors.txt
ExtendsTag/tsconfig.json(4,5): error TS5053: Option 'allowJs' cannot be specified with option 'declaration'.


==== ExtendsTag/tsconfig.json (1 errors) ====
    {
      "compilerOptions": {
        "out": "test.js",
        "allowJs": true
        ~~~~~~~~~
!!! error TS5053: Option 'allowJs' cannot be specified with option 'declaration'.
      },
      "files": [ "extends.js" ]
    }
    
==== ExtendsTag/extends.js (0 errors) ====
    /**
     * @extends {SomeBase}
     */
    class MyClass {
    
    }
    